crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_between.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t where x between 1 and 10

-- Output:
select a
from t
where x between 1 and 10;
