crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_cast.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select cast(x as integer), cast(y as text) from t

-- Output:
select
  cast(x as integer),
  cast(y as text)
from t;
