crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_cte.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- with cte as (select a from t) select * from cte

-- Output:
with
  cte as (
    select a from t
  )
select * from cte;
