crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_cte_columns.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- with cte(col1, col2) as (select a, b from t) select * from cte

-- Output:
with
  cte(col1, col2) as (
    select
      a,
      b
    from t
  )
select * from cte;
