crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_exists.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t where exists (select 1 from u where u.id = t.id)

-- Output:
select a
from t
where exists (
  select 1
  from u
  where u.id = t.id
);
