crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_function_calls.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select count(*), sum(x), avg(y), max(z), min(w) from t

-- Output:
select
  count(*),
  sum(x),
  avg(y),
  max(z),
  min(w)
from t;
