crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_group_by.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, count(*) from t group by a

-- Output:
select
  a,
  count(*)
from t
group by a;
