crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_in_list.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t where x in (1, 2, 3)

-- Output:
select a
from t
where x in (1, 2, 3);
