crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_is_null.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t where x is null and y is not null

-- Output:
select a
from t
where x is null
  and y is not null;
