crates/solite-fmt/src/snapshots/solite_fmt__tests__select_with_like.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t where name like '%test%'

-- Output:
select a
from t
where name like '%test%';
